# src-be/app/model/user-entity.ts
@@ -1,0 +1,13 @@
+import { UserRole } from './user-role';
+
+export interface UserEntity {
+	fullName: string;
+	email: string;
+	role: UserRole;
+	photo: string;
+}
+
+export interface UserProfileDto {
+	mail: string;
+	displayName: string;
+}
