# src-be/app/model/user-role.ts
@@ -1,0 +1,4 @@
+export enum UserRole {
+	Admin = 'admin',
+	Default = 'default',
+}
