# src-fe/src/app/libs/container/model/user-profile.ts
@@ -1,9 +1,15 @@
+import { UserRole } from '../enum/user-role';
+
 export interface UserProfile {
 	email: string;
 	fullName: string;
+	role: UserRole;
+	photoBase64: string;
 }
 
 export interface UserProfileDto {
-	mail: string;
-	displayName: string;
+	email: string;
+	fullName: string;
+	role: UserRole;
+	photo: string;
 }
